--- a/4주차/양준혁.md
+++ b/4주차/양준혁.md
@@ -51,7 +51,7 @@
 
 
 - createServer Method에 대하여  
-https://nodejs.org/ko/docs/guides/anatomy-of-an-http-transaction/
+
 
 <br />
 
@@ -158,9 +158,6 @@ http.createServer((req, res) => {
 ```
 <br />
 
-```js
-//
-```
 <br />
 
  !Warning 포트 충돌!<br />
@@ -209,6 +206,7 @@ http.createServer((req, res) => {
 
 
 ### 4.2 REST와 라우팅 사용하기  
+
 <br />
 
 REST?
@@ -226,9 +224,14 @@ https://www.youtube.com/watch?v=RP_f5dMoHFc
 <br />
 - res.end 앞에 return은 왜 붙이나요?  
 <br />
-함수의 끝을 명시하고 싶어서. res.end 하고 write/send/render 등 다시 response하는 경우 에러
+함수의 끝을 명시하고 싶어서. res.end 하고 write/send/render 등 다시 response하는 경우 에러  
 <br />
+<br />
+<br />
+
 - req.on('data')와 req.on('end')  
+<br />
+<br />
 <br />
 
 >The on method binds an event to a object. It is a way to express your intent if there is something happening (data sent or error in your case) , then execute the function added as a parameter.  
@@ -252,18 +255,246 @@ https://www.youtube.com/watch?v=RP_f5dMoHFc
 <br />
 
 <br />
+
 ### 4.3 쿠키와 세션 이해하기  
+
 <br />
-![image](https://user-images.githubusercontent.com/42092864/137003536-1442fde4-981e-4527-8927-b0b7bedadb29.png)
+
+![image](https://user-images.githubusercontent.com/42092864/137126346-324a5af0-9524-4c1a-8ad7-8f79bae27641.png)
+
 <br />
 
 - 쿠키는 요청의 헤더(Cookie)에 담겨 전송  
 <br />
 
+```js
+//cookie.js
+const http = require('http');
+
+http.createServer((req, res) => {
+  console.log(req.url, req.headers.cookie);
+  res.writeHead(200, { 'Set-Cookie': 'mycookie=test' });
+  res.end('Hello Cookie');
+})
+  .listen(8083, () => {
+    console.log('8083번 포트에서 서버 대기 중입니다!');
+});
+```
+
+<br />
+
+- favicon  
+
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/137126921-39529721-2b0f-4d81-b182-632359bda613.png)
+
+<br />
+
+ ![image](https://user-images.githubusercontent.com/42092864/137112184-52555a30-746e-4a99-acc1-5a1f4e18ba31.png)
+ 
+<br />
+
+<br />
+
+- cookie
+
+왜 사용해요? : "connectionless, stateless"
+
+<br />
+
+```js
+//cookie2.js
+const http = require('http');
+const fs = require('fs').promises;
+const url = require('url');
+const qs = require('querystring');
+➊
+const parseCookies = (cookie = '') =>
+  cookie
+    .split(';')
+    .map(v => v.split('='))
+    .reduce((acc, [k, v]) => {
+      acc[k.trim()] = decodeURIComponent(v);
+      return acc;
+    }, {});
+http.createServer(async (req, res) => {
+  const cookies = parseCookies(req.headers.cookie);
+➋
+  // 주소가 /login으로 시작하는 경우
+  if (req.url.startsWith('/login')) {
+    const { query } = url.parse(req.url);
+    const { name } = qs.parse(query);
+    const expires = new Date();
+    // 쿠키 유효 시간을 현재 시간 + 5분으로 설정
+    expires.setMinutes(expires.getMinutes() +     5);
+    res.writeHead(302, {
+      Location: '/',
+      'Set-Cookie': `name=${encodeURIComponent(name)}; Expires= ${expires.toGMTString()}; HttpOnly; Path=/`,
+    });
+    res.end();
+➌
+  // name이라는 쿠키가 있는 경우
+  } else if (cookies.name) {
+    res.writeHead(200, { 'Content-Type': 'text/plain; charset=utf-8' });
+    res.end(`${cookies.name}님 안녕하세요`);
+  } else {
+    try {
+      const data = await fs.readFile('./cookie2.html');
+      res.writeHead(200, { 'Content-Type': 'text/html; charset=utf-8' });
+      res.end(data);
+    } catch (err) {
+      res.writeHead(500, { 'Content-Type': 'text/plain; charset=utf-8' });
+      res.end(err.message);
+      }
+  }
+})
+  .listen(8084, () => {
+    console.log('8084번 포트에서 서버 대기 중입니다!');
+  });
+```
+
+<br />
+
+- session
+<br />
+
+```js
+//session.js
+
+const http = require('http');
+const fs = require('fs').promises;
+const url = require('url');
+const qs = require('querystring');
+
+const parseCookies = (cookie = '') =>
+  cookie
+    .split(';')
+    .map(v => v.split('='))
+    .reduce((acc, [k, v]) => {
+      acc[k.trim()] = decodeURIComponent(v);
+      return acc;
+    }, {});
+
+const session = {};
+
+http.createServer(async (req, res) => {
+  const cookies = parseCookies(req.headers.cookie);
+  if (req.url.startsWith('/login')) {
+    const { query } = url.parse(req.url);
+    const { name } = qs.parse(query);
+    const expires = new Date();
+    expires.setMinutes(expires.getMinutes() + 5);
+    const uniqueInt = Date.now();
+    session[uniqueInt] = {
+      name,
+      expires,
+    };
+    res.writeHead(302, {
+      Location: '/',
+      'Set-Cookie': `session=${uniqueInt}; Expires=${expires.toGMTString()}; HttpOnly; Path=/`,
+    });
+    res.end();
+  // 세션 쿠키가 존재하고, 만료 기간이 지나지 않았다면
+  } else if (cookies.session && session[cookies.session].expires > new Date()) {
+    res.writeHead(200, { 'Content-Type': 'text/plain; charset=utf-8' });
+    res.end(`${session[cookies.session].name}님 안녕하세요`);
+  } else {
+    try {
+      const data = await fs.readFile('./cookie2.html');
+      res.writeHead(200, { 'Content-Type': 'text/html; charset=utf-8' });
+      res.end(data);
+    } catch (err) {
+      res.writeHead(500, { 'Content-Type': 'text/plain; charset=utf-8' });
+      res.end(err.message);
+    }
+  }
+})
+  .listen(8085, () => {
+    console.log('8085번 포트에서 서버 대기 중입니다!');
+  });
+```
+<br />
+
 ### 4.4 https와 http2  
+
+- http와 http2
+
+- http와 https 
+
+
+
+<br />
+
+- HTTP 역사
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/137115031-74a7662c-726e-4f79-8f5f-ec949ae5c4a9.png)
+
+
+<br />
+
+- HTTP 초기
+
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/137115804-8e214efa-2546-43d4-a275-6547313ac50c.png)
+
+<br />
+
+> 무상태(Stateless) / HTTP 지속 연결 Persistent Connections
+<br />
+- HTTP 1.1 vs HTTP2
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/137114894-29e30688-14e2-4c07-ac97-6761e15ded8d.png)
+
+
+<br />
+
 ### 4.5 cluster   
+
+<br />
+
+- cluster?
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/137124817-e1556bbf-5e0c-45b2-a4d9-75dc2ba937c4.png)
+
+<br />
+
+cluster 모듈은 기본적으로 싱글 프로세스로 동작하는 노드가 CPU 코어를 모두 사용할 수 있게 해주는 모듈입니다.
+
+<br />
+
+```
+ fork()?
+```
+
+![image](https://user-images.githubusercontent.com/42092864/137122278-2b2530d3-13b0-4e50-b1a0-ddf5a5ac6cf8.png)
+
+<br />
+
+![image](https://user-images.githubusercontent.com/42092864/137122896-ba7abd52-2c66-4ebc-921c-08906e862994.png)
+
+<br />
+
+- 그런데 이거 왜 해요?
+> 워커 프로세스가 존재하기에 여섯 번까지는 오류가 발생해도 서버가 정상 작동할 수 있다는 뜻입니다. 
+
+... robustness by redundancy
+... 반응성
+... 가까운 S/W 공학 책을 참고해주세요.
+
 ### 4.6 함께 보면 좋은 자료  
 참고자료
 ---
+- https://nodejs.org/ko/docs/guides/anatomy-of-an-http-transaction/
 - https://gmlwjd9405.github.io/2018/10/27/webserver-vs-was.html 
+- https://nodejs.org/api/child_process.html#child_process_child_process_fork_modulepath_args_options
+- https://kldp.org/node/32210
+- https://dongqui.github.io/posts/cluster
+- HTTP 이해 (인프런 김영한)
+- https://nodejs.org/api/cluster.html
 
+- https://interconnection.tistory.com/74 (쿠키 그림)
