--- a/4주차/김홍인.md
+++ b/4주차/김홍인.md
@@ -55,7 +55,7 @@
     a();
     console.timeEnd('전체 시간');
     ```
-    
+    <img scr='./img/hong1' />
     ![Untitled](4%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%20a5843876dca24c0eb3d193de29b76dbf/Untitled.png)
     
 
