--- a/발표/4주차.md
+++ b/발표/4주차.md
@@ -14,8 +14,6 @@
 
 
 
-- createServer Method에 대하여  
-
 
 <br />
 
@@ -58,8 +56,9 @@ http.createServer((req, res) => {
 >  네트워크 호스트는 네트워크 주소가 할당된 네트워크 노드이다.  
 <br />
 
-간단하게? host (주소) = 네트워크 (주소; Ip address) !  
-로컬호스트 = 루프백 아이피(127.0.0.1)
+ㅁㅁ아파트 103동(주소; Host) 404호(Port) 
+<br />
+localhost = loopback IP Addr(127.0.0.1)
 <br />
 
 
