--- a/발표/4주차.md
+++ b/발표/4주차.md
@@ -56,8 +56,7 @@ http.createServer((req, res) => {
 >  네트워크 호스트는 네트워크 주소가 할당된 네트워크 노드이다.  
 <br />
 
-ㅁㅁ아파트 103동(주소; Host) 404호(Port) 
-<br />
+
 localhost = loopback IP Addr(127.0.0.1)
 <br />
 
@@ -73,7 +72,11 @@ _...IP? ..._
 ![image](https://user-images.githubusercontent.com/42092864/136998040-cc4a5a04-00ee-4fcc-b9f5-062218198abf.png)
 
 
+ㅁㅁ아파트 103동(주소; Host) 404호(Port) 
 <br/>
+<br/>
+<br/>
+
 
 ```js
 //server1-1.js
@@ -123,7 +126,7 @@ http.createServer((req, res) => {
 
 <br />
 
- !Warning 포트 충돌!<br />
+ !Warning 포트 충돌<br />
 
 ![image](https://user-images.githubusercontent.com/42092864/136842945-8f8f12db-6dd9-419f-9f6b-f3036945998a.png)
 
@@ -379,6 +382,18 @@ http.createServer(async (req, res) => {
 ```
 <br />
 
+- 뭐가 달라요? (cookie, session)
+ 
+
+|차이점|쿠키|세션|
+|-----|-----------------|-------------|
+|저장장소|사용자(local)|서버|
+|용도|ID/PW저장, 장바구니 등| 로그인 등 보안이 중요한 곳|
+
+<br />
+
+
+----------------
 ### 4.4 https와 http2  
 
 - http와 http2
