--- a/발표/4주차.md
+++ b/발표/4주차.md
@@ -89,7 +89,7 @@ _...IP? ..._
 
 ![image](https://user-images.githubusercontent.com/42092864/136999916-503e2bc9-ae92-44fe-bf19-7b8595fd9a09.png)
 
-(HTTP 1.1)TCP IP 방식(localhost에서 연결을 거부:ERR_CONNECTION_REFUSED)
+localhost에서 연결을 거부:ERR_CONNECTION_REFUSED
 <br />
 
 ![image](https://user-images.githubusercontent.com/42092864/137001261-38f1bb3b-b3c4-4ffa-b3fa-b231e64f4802.png)
