--- a/발표/5주차.md
+++ b/발표/5주차.md
@@ -22,7 +22,7 @@
 - single은 하나의 파일을 업로드할 때, none은 파일은 업로드하지 않을 때
 - req.file안에 업로드 정보 저장
 
-<img src='./img/reqfile.JPG'/>
+<img src='./img/reqfile.jpeg'/>
      → 이미지에 대한 정보가 여기에 보여준다. (배열로 보여준다)
 
 - array와 fields는 여러 개의 파일을 업로드 할 때 사용한다.
@@ -40,14 +40,14 @@
 
 - 동적으로 변하는 라우트 매개변수로 만든다.
 
-<img src='./img/router1.JPG'/>
+<img src='./img/router1.jpeg'/>
 
 → 주소에 :id가 있는데 문자 그대로 :id를 의미하는 것이 아니다. 이 부분에는 다른 값을 넣을 수 있다. 
 
 - 주의할 점으로는 일반 라우터보다 뒤에 위치해야 한다.=
 
 
-<img src='./img/router2.JPG'/>
+<img src='./img/router2.jpeg'/>
 
 → 다양한 라우터를 아우르는 와일드카드 역할을 하므로 일반 라우터보다는 뒤에 위치해야 다른 라우터를 방해하지 않는다.
 
