--- a/발표/5주차.md
+++ b/발표/5주차.md
@@ -22,7 +22,7 @@
 - single은 하나의 파일을 업로드할 때, none은 파일은 업로드하지 않을 때
 - req.file안에 업로드 정보 저장
 
-<img src='./img/reqfile.jpeg'/>
+<img src='./img/reqfile.jpeg'/ width='400px'>
      → 이미지에 대한 정보가 여기에 보여준다. (배열로 보여준다)
 
 - array와 fields는 여러 개의 파일을 업로드 할 때 사용한다.
