--- a/5주차/황지수.md
+++ b/5주차/황지수.md
@@ -78,7 +78,7 @@ dependencies: 설치된 버전, node_modules 폴더: 설치한 패키지
 - app.set(키, 값): 데이터 저장
 - app.get(주소, 라우터): 주소에 대한 get 요청이 올 때 어떤 동작을 할지
 
-<img src='./img/js_4.png' width='400px' />
+<img src='./img/js_4.png' />
 
 ### 6.2 자주 사용하는 미들웨어
 
