--- a/5주차/이준석.md
+++ b/5주차/이준석.md
@@ -29,7 +29,7 @@
 ### 5.3 패키지 버전 이해하기
  노드는 세 자리로 버전을 나타낸다.
  서로 다른 버전의 패키지들로 인한 에러를 방지하기 위해 SemVer를 사용하기 때문.
- <img src='./img/Semver_이준석.png' width='500px' />
+ <img src='./img/semver_이준석.png' width='500px' />
 
 ### 5.4 기타 npm 명령어
  - npm outdated: 업데이트 할 수 있는 패키지가 있는지 확인
