--- a/발표/5주차.md
+++ b/발표/5주차.md
@@ -73,7 +73,7 @@ npm install [패키지 이름] : 패키지 설치, package.json이 있는 폴더
 
 node_modules 라는 폴더도 생성되었는데 이 안에는 설치한 패키지들이 들어 있다. express가 의존하는 여러 개의 패키지들이 들어있음 → 의존 관계
 
-![215.jpeg](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/49ff8716-46f1-46bf-a54e-59547296606a/215.jpeg)
+<img src='./img/215.jpeg' width='400px' />
 
 package-lock.json이라는 파일도 생성되었는데 node_modules에 들어있는 패키지들의 정확한 버전과 의존 관계가 담겨 있다. → npm으로 패키지를 설치, 수정, 삭제할 때마다 패키지들 간의 내부 의존 관계를 이 파일에 저장함
 
@@ -246,7 +246,7 @@ app.use와 함께 사용.
 
 주소를 첫 번째 인수로 넣는다면 미들웨어는 해당하는 요청에서만 실행. 넣어주지 않는다면 모든 요청에서 실행.
 
-![미들웨어가 실행되는 경우.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/bb0339c6-d413-419c-95ae-3ad51cceaa5f/%E1%84%86%E1%85%B5%E1%84%83%E1%85%B3%E1%86%AF%E1%84%8B%E1%85%B0%E1%84%8B%E1%85%A5%E1%84%80%E1%85%A1_%E1%84%89%E1%85%B5%E1%86%AF%E1%84%92%E1%85%A2%E1%86%BC%E1%84%83%E1%85%AC%E1%84%82%E1%85%B3%E1%86%AB_%E1%84%80%E1%85%A7%E1%86%BC%E1%84%8B%E1%85%AE.png)
+<img src='./img/미들웨어가 실행되는 경우.png' width='400px' />
 
 app.use나 app.get 같은 라우터에 미들웨어 여러 개 장착 가능
 
