--- a/발표/5주차.md
+++ b/발표/5주차.md
@@ -246,7 +246,7 @@ app.use와 함께 사용.
 
 주소를 첫 번째 인수로 넣는다면 미들웨어는 해당하는 요청에서만 실행. 넣어주지 않는다면 모든 요청에서 실행.
 
-<img src='./img/미들웨어가 실행되는 경우.png' width='400px' />
+<img src='./img/216.png' width='400px' />
 
 app.use나 app.get 같은 라우터에 미들웨어 여러 개 장착 가능
 
