--- a/5주차/양준혁.md
+++ b/5주차/양준혁.md
@@ -91,32 +91,30 @@ router.get('/user/:id', function(req, res) {
 
 ### 6.4 req, res 객체 살펴보기
 #### Request
-• req.app: req 객체를 통해 app 객체에 접근할 수 있습니다. req.app.get('port')와 같은 식으로 사용할 수 있습니다.
-• req.body: body-parser 미들웨어가 만드는 요청의 본문을 해석한 객체입니다.
-• req.cookies: cookie-parser 미들웨어가 만드는 요청의 쿠키를 해석한 객체입니다.
-• req.ip: 요청의 ip 주소가 담겨 있습니다.
-• req.params: 라우트 매개변수에 대한 정보가 담긴 객체입니다.
-• req.query: 쿼리스트링에 대한 정보가 담긴 객체입니다.
-• req.signedCookies: 서명된 쿠키들은 req.cookies 대신 여기에 담겨 있습니다.
-• req.get(헤더 이름): 헤더의 값을 가져오고 싶을 때 사용하는 메서드입니다.
-
-#### Response
-• res.app: req.app처럼 res 객체를 통해 app 객체에 접근할 수 있습니다.
-• res.cookie(키, 값, 옵션): 쿠키를 설정하는 메서드입니다.
-• res.clearCookie(키, 값, 옵션): 쿠키를 제거하는 메서드입니다.
-• res.end(): 데이터 없이 응답을 보냅니다.
-• res.json(JSON): JSON 형식의 응답을 보냅니다.
-• res.redirect(주소): 리다이렉트할 주소와 함께 응답을 보냅니다.
-• res.render(뷰, 데이터): 다음 절에서 다룰 템플릿 엔진을 렌더링해서 응답할 때 사용하는 메서드입니다.
-• res.send(데이터): 데이터와 함께 응답을 보냅니다. 데이터는 문자열일 수도 있고 HTML일 수도 있으며, 버퍼일 수도 있고 객체나 배열일 수도 있습니다.
-• res.sendFile(경로): 경로에 위치한 파일을 응답합니다.
-• res.set(헤더, 값): 응답의 헤더를 설정합니다.
-• res.status(코드): 응답 시의 HTTP 상태 코드를 지정합니다.
-### 6.5 템플릿 엔진 사용하기
+• req.app: req 객체를 통해 app 객체에 접근할 수 있습니다. req.app.get('port')와 같은 식으로 사용할 수 있습니다.ㅡㅠ<<br>
+• req.body: body-parser 미들웨어가 만드는 요청의 본문을 해석한 객체입니다.<br>
+• req.cookies: cookie-parser 미들웨어가 만드는 요청의 쿠키를 해석한 객체입니다.<br>
+• req.ip: 요청의 ip 주소가 담겨 있습니다.<br>
+• req.params: 라우트 매개변수에 대한 정보가 담긴 객체입니다.<br>
+• req.query: 쿼리스트링에 대한 정보가 담긴 객체입니다.<br>
+• req.signedCookies: 서명된 쿠키들은 req.cookies 대신 여기에 담겨 있습니다.<br>
+• req.get(헤더 이름): 헤더의 값을 가져오고 싶을 때 사용하는 메서드입니다.<br>
+<br>
+#### Response<br>
+• res.app: req.app처럼 res 객체를 통해 app 객체에 접근할 수 있습니다.<br>
+• res.cookie(키, 값, 옵션): 쿠키를 설정하는 메서드입니다.<br>
+• res.clearCookie(키, 값, 옵션): 쿠키를 제거하는 메서드입니다.<br>
+• res.end(): 데이터 없이 응답을 보냅니다.<br>
+• res.json(JSON): JSON 형식의 응답을 보냅니다.<br>
+• res.redirect(주소): 리다이렉트할 주소와 함께 응답을 보냅니다.<br>
+• res.render(뷰, 데이터): 다음 절에서 다룰 템플릿 엔진을 렌더링해서 응답할 때 사용하는 메서드입니다.<br>
+• res.send(데이터): 데이터와 함께 응답을 보냅니다. 데이터는 문자열일 수도 있고 HTML일 수도 있으며, 버퍼일 수도 있고 객체나 배열일 수도 있습니다.<br>
+• res.sendFile(경로): 경로에 위치한 파일을 응답합니다.<br>
+• res.set(헤더, 값): 응답의 헤더를 설정합니다.<br>
+• res.status(코드): 응답 시의 HTTP 상태 코드를 지정합니다.<br>
+### 6.5 템플릿 엔진 사용하기<br>
 - pug, 넌적스, ejs (비추,,라니,,)
 - pug는 태그(<>)가 없다. 신기하다!
 - 대부분 템플릿 엔진은 비슷한것 같아 보인다
 - #{variablesFromServer}, header, footer 등 
 ------
-
-질문, 이해가 안 갔던 것, 궁금한 것, 스터디장이나 다른 사람들에게 물어보고 싶은 것, 기타 등등이 있으시면 써주시고, 이 문구는 지워주세요!
