--- a/발표/6주차.md
+++ b/발표/6주차.md
@@ -486,4 +486,7 @@ router.route('/:id')
 2. 몽고DB 서버 시작 → 콘솔 하나 더 열어 웹 서버 실행
 3. npm start로 서버 실행 → [localhost:3002](http://localhost:3002)
 
+참고자료
+---
+- [https://www.zerocho.com/category/MongoDB/post/5963b908cebb5e001834680e](https://www.zerocho.com/category/MongoDB/post/5963b908cebb5e001834680e)
 ---
