--- a/7주차/황지수.md
+++ b/7주차/황지수.md
@@ -8,7 +8,7 @@
 
 ### 9.1 프로젝트 구조 갖추기
 
-<img src="./img/js_1.PNG" />
+<img src="./img/js_1.PNG" width=400/>
 <img src="./img/js_2.PNG" />
 
 ### 9.2 데이터베이스 세팅하기
