--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -129,7 +129,7 @@ http://www.passportjs.org/docs/
 이때 게시글과 이미지 경로는 묶어준다. 그래서 프론트로 이미지 경로를 보내줌
 
 - 멀터로 이미지 올린 사진 
-<img src="./img/multer1.PNG" width=600/>
+<img src= './img/multer1.PNG' width=600/>
 - 터미널에 뜬 내용 사진 
 <img src="./img/multer2.PNG" width=600/>
 
