--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -129,19 +129,19 @@ http://www.passportjs.org/docs/
 이때 게시글과 이미지 경로는 묶어준다. 그래서 프론트로 이미지 경로를 보내줌
 
 - 멀터로 이미지 올린 사진 
-<img src= './img/multer1.PNG' width=600/>
-- 터미널에 뜬 내용 사진 
-<img src="./img/multer2.PNG" width=600/>
+<img src = './img/multer1.png' width=600 />
+- 터미널에 뜬 내용 사진
+- <img src = './img/multer2.png' width=600 />
 
 ### 9.5 프로젝트 마무리하기
 ### 팔로잉 기능 구현
 
 - 팔로잉
- <img src="./img/follow1.PNG" width=600/>
+ <img src = './img/follow1.png' width=600 />
 - 팔로잉 된 상태
- <img src="./img/follow2.PNG" width=400/>
+ <img src = './img/follow2.png' width=400 />
 - 팔로잉 목록
- <img src="./img/follow3.PNG" width=500/>
+ <img src = './img/follow3.png' width=500 />
 
 ### 해시태그
 
@@ -159,10 +159,10 @@ const hashtags = req.body.content.match(/#[^\s#]*/g);
 - g 모두
 
 ##### 해시태그 입력 이미지 
- <img src="./img/hash2.PNG" width=600/>
+ <img src = './img/hash2.png' width=600 />
 
 #### 해시탸그 검색
 
 해시태그를 검색하면 해시태그에 해당하는 게시물만 나타남.
- <img src="./img/hash1.PNG" width=600/>
+ <img src = './img/hash1.png' width=600 />
 ---
