--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -161,7 +161,7 @@ const hashtags = req.body.content.match(/#[^\s#]*/g);
 ##### 해시태그 입력 이미지 
  <img src = './img/hash2.png' width=600 />
 
-#### 해시탸그 검색
+#### 해시태그 검색
 
 해시태그를 검색하면 해시태그에 해당하는 게시물만 나타남.
  <img src = './img/hash1.png' width=600 />
