--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -7,6 +7,98 @@
 ## 9장
 
 ### 9.1 프로젝트 구조 갖추기
+# 9.1 프로젝트 구조 갖추기
+
+#### 1. 프로젝트 폴더 만들기
+
+- nodebird 폴더 만들기
+
+
+
+#### 2. `package.json` 생성
+
+- 항상 `package.json`을 제일 먼저 생성해야 함
+  - case1 : `package.json`을 생성해주는 `npm init`명령어를 콘솔에서 호출하기
+  - case2 : 직접 만들기
+- `version`, `description`, `author`, `license`는 원하는 대로 자유롭게 수정해도 됨
+- `scripts` 부분에 `start` 속성은 잊지 말고 넣어줘야 함
+
+
+
+package.json
+
+```json
+{
+    "name": "nodebird",
+    "version": "0.0.1",
+    "description": "익스프레스로 만드는 SNS 서비스",
+    "main": "app.js",
+    "scripts": {
+        "start": "nodemon app"
+    },
+    "author": "ZeroCho",
+    "license": "MIT",
+}
+```
+
+
+
+#### 3. 기본 폴더 구조 구성하기
+
+MySQL 이용 시 : 
+
+```bash
+$ npm i sequeilize mysql2 sequelize-cli
+```
+
+- `node_modules`폴더와 `package-lock.json`생성 됨
+
+
+
+```bash
+$ npx sequelize init
+```
+
+- `config`, `migrations`, `models`, `seeders` 폴더 생성 됨
+
+
+
+> npx 명령어를 사용하는 이유 : 전역 설치(npm i -g)를 피하기 위함
+
+
+
+아래의 폴더와 파일들도 생성하기
+
+- `views`폴더 : 템플릿 파일 넣는 용도
+- `routes`폴더 : 라우터를 넣는 용도
+- `public`폴더 : 정적 파일을 넣는 용도
+- `passport`폴더 : passport 패키지를 위한 용도
+- `app.js` :  익스프레스 서버 코드를 담는 용도
+- `.env` : 설정값들을 담는 용도
+
+
+<img src = './img/20211117205408755.png' width=300 />
+
+이 구조를 크게 벗어나지 않지만, 고정된 구조는 아님
+
+편의에 따라 바꿔도 되며, 서비스의 규모에 따라 폴더 구조도 복잡해지므로 각 서비스에 맞는 구조 적용 필요
+
+
+
+#### 4. 필요한 npm 패키지들 설치
+
+```bash
+$ npm i express cookie-parser express-session morgan multer dotenv nunjucks
+$ npm i -D nodemon
+```
+
+
+
+#### 5. `app.js`, `.env` 작성
+
+#### 6. 라우터와 템플릿 엔진 만들기
+
+
 
 ### 9.2 데이터베이스 세팅하기
 
