--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -77,7 +77,7 @@ $ npx sequelize init
 - `.env` : 설정값들을 담는 용도
 
 
-<img src = './img/20211117205408755.png' width=300 />
+<img src = './img/image-20211117205408755.png' width=300 />
 
 이 구조를 크게 벗어나지 않지만, 고정된 구조는 아님
 
