--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -102,6 +102,173 @@ $ npm i -D nodemon
 
 ### 9.2 데이터베이스 세팅하기
 
+
+models/user.js
+
+```javascript
+const Sequelize = require('sequelize');
+
+module.exports = class User extends Sequelize.Model {
+    static init(sequelize) {
+        return super.init({
+            email : {
+                type: Sequelize.STRING(40),
+                allowNull: true,
+                unique: true,
+            },
+            nick: {
+                type: Sequelize.STRING(15),
+                allowNull: false,
+            },
+            password: {
+                type: Sequelize.STRING(100),
+                allowNull: true,
+            },
+            provider: {
+                type: Sequelize.STRING(10),
+                allowNull: false,
+                defaultValue: 'local',
+            },
+            snsID: {
+                type: Sequelize.STRING(30),
+                allowNull: true,
+            }, 
+        }, {
+                sequelize,
+                timestamps: true,
+                underscored: false,
+                modelName: 'User',
+                tableName: 'users',
+                paranoid: true,
+                charset: 'utf8',
+                collate: 'utf8_general_ci',
+            });
+        }
+
+        static associate(db) {
+            db.User.hasMany(db.Post);
+            db.User.belongsToMany(db.User, {
+                foreignKey: 'followingId',
+                as: 'Followers',
+                through: 'Follow',
+            });
+            db.User.belongsToMany(db.User, {
+                foreignKey: 'followerId',
+                as: 'Followings',
+                through: 'Follow',
+            });
+        }
+};
+
+```
+
+
+
+models/post.js
+
+```javascript
+const Sequelize = require('sequelize');
+
+module.exports = class Post extends Sequelize.Model {
+    static init(sequelize) {
+        return super.init({
+            content: {
+                type: Sequelize.STRING(140),
+                allowNull: false,
+            },
+            img: {
+                type: Sequelize.STRING(200),
+                allowNull: true,
+            },
+        }, {
+            sequelize,
+            timestamps: true,
+            underscored: false,
+            modelName: 'Post',
+            tableName: 'posts',
+            paranoid: false,
+            charset: 'utf8mb4',
+            collate: 'utf8mb4_general_ci',
+        });
+    }
+
+    static associate(db) {
+        db.Post.belongsTo(db.User);
+        db.Post.belongsTo(db.Hashtag, {through: 'PostHashTag'});
+    }
+};
+```
+
+
+
+models/hashtag.js
+
+```javascript
+const Sequelize = require('sequelize');
+
+module.exports = class Hashtag extends Sequelize.Model {
+    static init(sequelize) {
+        return super.init({
+            title: {
+                type: Sequelize.STRING(15),
+                allowNull: false,
+                unique: true,
+            },
+        }, {
+            sequelize,
+            timestamps: true,
+            underscored: false,
+            modelName: 'Hashtag',
+            tableName: 'hashtags',
+            paranoid: false,
+            charset: 'utf8mb4',
+            collate: 'utf8mb4_general_ci',
+        });
+    }
+
+    static associate(db) {
+        db.Hashtag.belongsToMany(db.Post, {through: 'PostHashtag'});
+    }
+};
+```
+
+
+
+models/index.js
+
+```javascript
+const Sequelize = require('sequelize');
+const env = process.env.NODE_ENV || 'development';
+const config = require('../config/config')[env];
+const User = require('./user');
+const Post = require('./post');
+const Hashtag = require('./hashtag');
+
+const db = {};
+const sequelize = new Sequelize(
+  config.database, config.username, config.password, config,
+);
+
+db.sequelize = sequelize;
+db.User = User;
+db.Post = Post;
+db.Hashtag = Hashtag;
+
+User.init(sequelize);
+Post.init(sequelize);
+Hashtag.init(sequelize);
+
+User.associate(db);
+Post.associate(db);
+Hashtag.associate(db);
+
+module.exports = db;
+```
+
+
+
+
+
 ### 9.3 Passport 모듈로 로그인 구현하기
 
 ### [추가] Passport
