--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -102,6 +102,13 @@ $ npm i -D nodemon
 
 ### 9.2 데이터베이스 세팅하기
 
+- User모델과 Post모델은 1(User):N(Post) 관계
+- User모델과 User모델은 N:M 관계
+  - N:M관계에서는 모델 이름과 컬럼 이름을 따로 정해야 함
+  - through 옵션을 사용해 생성할 모델 이름을 설정함
+  - 같은 테이블 간 N:M관계에서는 as옵션도 넣어줘야 함 (둘 다 같은 모델이라 구분이 되지 않기 때문)
+  - as는 foreignKey와 반대되는 모델을 가리킴
+- Post모델과 Hashtag 모델은 N:M관계
 
 models/user.js
 
@@ -263,6 +270,12 @@ Post.associate(db);
 Hashtag.associate(db);
 
 module.exports = db;
+```
+
+데이터베이스 생성하기
+
+```bash
+$ npm sequelize db:create
 ```
 
 
