--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -284,6 +284,60 @@ $ npm sequelize db:create
 
 ### 9.3 Passport 모듈로 로그인 구현하기
 
+#### 1. Passport 관련 패키지 설치
+
+```bash
+$ npm i passport passport-local passport-kakao bcrypt
+```
+
+
+
+#### 2. Passport 폴더 내부에 index.js 파일 만들고 코드 작성하기
+
+passport/index.js
+
+```javascript
+const passport = require('passport');
+const local = require('./localStrategy');
+const kakao = require('./kakaoStrategy');
+const User = require('../models/user');
+
+module.exports = () => {
+    passport.serializeUser((user, done) => {
+        done(null, user.id);
+    });
+
+    passport.deserializeUser((id, done) => {
+        User.findOne({ where: { id } })
+            .then(user => done(null, user))
+            .catch(err => done(err));
+    });
+
+    local();
+    kakao();
+};
+```
+
+
+
+`serializeUser`
+
+- 로그인 시 실행됨
+- req.session(세션) 객체에 어떤 데이터를 저장할지 정하는 메서드
+- 매개변수 : user
+- 사용자 변수가 들어 있음
+
+
+
+`deserializeUser`
+
+- 매 요청 시 실행됨
+- passport.session 미들웨어가 이 메서드를 호출함
+- 매개변수 : serializeUser의 done의 두 번째 인수로 넣었던 데이터 -> 이 프로젝트에서는 사용자의 아이디
+- serializeUser에서 세션에 저장했던 아이디를 받아 데이터베이스에서 사용자 정보를 조회함
+  - 조회한 정보를 req.user에 저장
+  - 따라서 req.user를 통해 로그인한 사용자의 정보를 가져올 수 있음
+
 ### [추가] Passport
 ##### passport = login logic을 위해 사용한다.
 ##### express framework에서 등장한 라이브러리, 300가지의 인증방법을 전략이라는 방법으로 쉽게 구현할 수 있게 도와준다.
