--- a/발표/7주차.md
+++ b/발표/7주차.md
@@ -338,6 +338,8 @@ module.exports = () => {
   - 조회한 정보를 req.user에 저장
   - 따라서 req.user를 통해 로그인한 사용자의 정보를 가져올 수 있음
 
+<img src = './img/image-20211117213307774.png' />
+
 ### [추가] Passport
 ##### passport = login logic을 위해 사용한다.
 ##### express framework에서 등장한 라이브러리, 300가지의 인증방법을 전략이라는 방법으로 쉽게 구현할 수 있게 도와준다.
