--- a/8주차/이준석.md
+++ b/8주차/이준석.md
@@ -9,8 +9,11 @@
 ### 10.1 API 서버 이해하기
 #### API
  - 다른 애플리케이션에서 현재 프로그램의 기능을 사용할 수 있게함
- <img src = './img/api_이준석.png' width=400 />
- API는 손님(프로그램)이 주문할 수 있게 메뉴(명령 목록)를 정리하고, 주문(명령)을 받으면 요리사(응용프로그램)와 상호작용하여 요청된 메뉴(명령에 대한 값)를 전달
+ <img src = './img/api_js.png' width=400 />
+ API는 손님(프로그램)이 주문할 수 있게 메뉴(명령 목록)를 정리하고, <br>
+ 주문(명령)을 받으면 요리사(응용프로그램)와 상호작용하여 요청된 메뉴(명령에 대한 값)를 전달
+ 
+ 
  ```쉽게 말해, API는 프로그램들이 서로 상호작용하는 것을 도와주는 매개체로 볼 수 있다.```
 
 ### 10.2 프로젝트 구조 갖추기
@@ -26,12 +29,16 @@
 ### 10.3 JWT 토큰으로 인증하기
  #### 1. 인증을 윈한 JWT
  - 클라이언트가 데이터를 가져가게 하려면 인증 과정이 필요함
+ 
  ##### JWT Json Web Token
+ 
   - 헤더, 페이로드 ,시그니처
   - 헤더: 토큰의 종류, 해시 알고리즘 정보
   - 페이로드: 토큰의 내용물이 인코딩된 부분
   - 시그니처: 토큰 변조되었는지 확인
-   <img src = './img/jwt_이준석.png' width=400 />
+
+<img src = './img/jwt_js.png' width=400 />
+   
  #### 2. JWT 사용시 주의점
    <img src = './img/jwt02.png' width=600 />
    
@@ -116,9 +123,10 @@
     - apiLimiter 미들웨어 추가
     - deprecated 미들웨어는 사용하면 안되는 라우터에 붙여서 사용시 경고로 쓰임
  - 응답 코드
-    <img src = './img/응답코드_이준석.png' width=400 />
+  <img src = './img/rescode_js.png' width=400 />
 
 ### 10.7 CORS 이해하기
+
 <img src = './img/cors_이준석.png' width=400 />
  
  - 요청을 보내는 프런트와 요청을 받는 프론트가 다르면 에러가 발생
@@ -150,8 +158,10 @@
     - 호스트와 비밀키가 모두 일치할 때만 CORS 허용
  - CORS 요청 보내기
     - 응답 헤더의 도메인 확인
-    <img src = './img/cors도메인_이준석.png' width=400 />
+    <img src = './img/corsdomain_js.png' width=400 />
+    
  - 프록시 서버
     - CORS 문제의 또 다른 해결책
-    <img src = './img/프록시_이준석.png' width=400 />
+    <img src = './img/proxy_js.png' width=400 />
+    
 ---
