--- a/발표/8주차.md
+++ b/발표/8주차.md
@@ -1,8 +1,10 @@
-# **8주차 JS 스터디 정리**
+# 8주차 JS 스터디 정리
 
-[제목 없음](https://www.notion.so/5addf1625cb049f1b26080de14a9a0ba)
+| 장   | 제목               |
+| ---- | ------------------ |
+| 10장 | 웹 API 서버 만들기 |
 
-## **10장**
+## 10장
 
 ### **10.1 API 서버 이해하기**
 
