--- a/발표/8주차.md
+++ b/발표/8주차.md
@@ -182,9 +182,9 @@ router.post('/domain', isLoggedIn, async(req, res, next) => {
 
 nodebird와 nodebird-api 서버 실행 후  [localhost:8002](http://localhost:8002) 에 접속
 
-<img src='./img/8-1.png' />
-<img src='./img/8-2.png' />
-<img src='./img/8-3.png' />
+<img src='./img/8-1.png' width=200/>
+<img src='./img/8-2.png' width=200/>
+<img src='./img/8-3.png' width=300/>
 
 ### **10.3 JWT 토큰으로 인증하기**
 
@@ -300,7 +300,7 @@ module.exports = router;
     - **code**는 HTTP 상태 코드를 사용해도 되고, 일관성있는 규칙만 있다면 임의로 숫자를 부여해도 된다.
         - code를 이해하지 못할 경우를 대비하여 message도 같이 보낸다.
         
-       <img src='./img/8-code.png' />
+       <img src='./img/8-code.png' width=300 />
         
 
 - 라우터 서버에 연결
@@ -376,10 +376,10 @@ module.exports = router;
 - nodecat에서 발급받은 토큰 테스트
     - [http://127.0.0.1:4000/test](http://127.0.0.1:4000/test) 접속
 
-<img src='./img/8-4.png' />
+<img src='./img/8-4.png' width=400 />
 
 - 토큰 만료 화면
     - 1분 후 [http://127.0.0.1:4000/test](http://127.0.0.1:4000/test) 재접속
     
-   <img src='./img/8-5.png' />
-   <img src='./img/8-6.png' />
+   <img src='./img/8-5.png' width=300/>
+   <img src='./img/8-6.png' width=400 />
