--- a/8주차/양준혁.md
+++ b/8주차/양준혁.md
@@ -65,12 +65,31 @@ const request = async (req, api) => {
 
 
 - CORS는 "브라우저"에서 거르는 정책이다. (에러 로그로 잘 안남는다)
- - CORS 문제 해결 방법
- -  프리플라이트 요청(예비요청 - 본 요청)
+
+
+- CORS 문제 해결 방법
+
+
+-  프리플라이트 요청(예비요청 - 본 요청)
+
+
 ![image](https://user-images.githubusercontent.com/42092864/143234336-770e15de-4e2c-4277-875c-bf9eb45b515f.png)
 
  - Simple Request, Credentialed Request
 
+- 프록시 서버
+- 서버에서 서버로 요청을 보낼때는 CORS 문제가 발생하지 않는다.
 
-    
+- 리버스 프록시
+![image](https://user-images.githubusercontent.com/42092864/143236566-621186d8-9edb-41d3-8853-098273614952.png)
+![image](https://user-images.githubusercontent.com/42092864/143236667-17a96420-86be-4159-9059-b3e7b740e8cc.png)
+
+
+ 
 ---
+
+출처
+https://yunyoung1819.tistory.com/9
+https://gmlwjd9405.github.io/2018/10/27/webserver-vs-was.html
+https://aws.amazon.com/ko/getting-started/?nc2=h_ql_le_gs_rc
+https://www.samsungsds.com/kr/insights/1256264_4627.html
