--- a/9주차/김홍인.md
+++ b/9주차/김홍인.md
@@ -190,7 +190,7 @@ $ npm run coverage
 
 ```
 
-![Untitled](9%E1%84%8C%E1%85%AE%E1%84%8E%E1%85%A1%20%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%85%E1%85%B5%2040a0c42a9ccf47099da6cdf984860411/Untitled.png)
+<img src = './img/KakaoTalk_20211201_203048026.jpg' width = 400px>
 
 - 표의 열을 살펴보면, 각각 File(파일과 폴더 이름), % Stmts(구문 비율), % Branch(if문 등의 분기점 비율), % Funcs(함수 비율), % Lines(코드 줄 수 비율), Uncovered Line #s(커버되지 않은 줄 위치)
 - 퍼센티지가 높을수록 많은 코드가 테스트되었다는 의미
