--- a/발표/9주차.md
+++ b/발표/9주차.md
@@ -155,7 +155,7 @@ $ npm run coverage
         사용자 못 찾음
 ```
 
-<img src = './img/KakaoTalk_20211201_203048026.jpg' width = 400px>
+<img src = './img/h1.jpg' width = 400px>
 
 - 표의 열을 살펴보면, 각각 File(파일과 폴더 이름), % Stmts(구문 비율), % Branch(if문 등의 분기점 비율), % Funcs(함수 비율), % Lines(코드 줄 수 비율), Uncovered Line #s(커버되지 않은 줄 위치)
 - 퍼센티지가 높을수록 많은 코드가 테스트되었다는 의미
